--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": { 
+  "dependencies": {
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
   }
 }
